<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B5998"
    tools:context="com.example.devpartnerssoftware.instagram.MainActivity">

    <TextView
        android:id="@+id/facebookText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="facebook"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailEdit"
        android:inputType="textEmailAddress"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/facebookText"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:padding="10dp"
        />


    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordEdit"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit"
        android:padding="10dp"
        android:textSize="15sp"

        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
        android:layout_marginTop="25dp"
        android:background="@color/loginButton"
        android:textColorHint="@android:color/white"

        />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgotText"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="130dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/white"

        />

    <TextView
        android:id="@+id/signText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="70dp"
        android:hint="@string/signText"
        android:textColorHint="@android:color/white"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotText"


        />



</android.support.constraint.ConstraintLayout>
